custom-theme/css/theme.css
::placeholder { color: #879092; opacity: 1;}

html,
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    scroll-behavior: smooth;
}
body > footer {
    margin-top: auto;
}
body {
	font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
	margin: 0;
	padding: 0;
	position: relative;
}

body:before {
	content: "xsmall";
	display: none;
	visibility: hidden;
}
@media (min-width: 20em) {
	body:before {
		content: "small";
	}
}
@media (min-width: 40em) {
	body:before {
		content: "medium";
	}
}
@media (min-width: 50em) {
	body:before {
		content: "large";
	}
}
@media (min-width: 80em) {
	body:before {
		content: "xlarge";
	}
}

footer {
	font-size: .7rem;
}

.active a {
    font-weight: bold;
}
a.current  {
	font-weight: bold;
}

/* github header theme
.header {
    color: hsla(0,0%,100%,.7);
    background-color: #24292e;
}
.navbar-dropdown a.navbar-item {
	color: #0a0a0a;
}
.header .navbar-dropdown a.navbar-item:hover,
.header .navbar.is-transparent .navbar-dropdown a.navbar-item:hover {
	background-color: #f9f9f9 !important;
}
*/
.header a.search { display: none; }
.header + section.section {
	padding-top: 100px;
}

.navbar-custom-button{
    cursor:pointer;
    display:flex;
    height:3.25rem;
    position:relative;
    width:3.25rem;
}

.lowertag {
	font-weight: lighter !important;
}

.navbar-custom-button .icon {
	height: 100%;
	width: 100%;
}
.navbar-custom-button span{
	display:flex;
    left:calc(50% - 8px);
    -webkit-transform-origin:center;
    transform-origin:center;
    transition-duration:86ms;
    transition-property:background-color,opacity,-webkit-transform;
    transition-property:background-color,opacity,transform;
    transition-property:background-color,opacity,transform,-webkit-transform;
    transition-timing-function:ease-out;
    width:16px
}
.navbar-custom-button:hover{
    background-color:rgba(0,0,0,.05)
}
.navbar-custom-button.is-active span{
    color: red;
}
 
.title {
    width: 100%;
    font-size: 1.4rem;
}

.title  a.logo { font-size: 20px;  float: left;}
.title img { height: 22px;margin: 3px 5px 0px; float: right;}
.search { float: right; }
.search input { background: #3f4448;border: 1px solid #3f4448;border-radius: 6px;padding: 5px; width: 300px; color: #ffffff;}

.header a {
	font-weight: 600;
    white-space: nowrap;
    text-decoration: none;
}
.header ul {
	list-style: none;
    position: relative;
    margin: 0 auto;
    float: left;
}
.header li {
	float: left;
	margin-right: 16px!important;
}

.sticky	{
	position: sticky;
  	top: 100px;
}

.menu.quickview {
	padding: .9rem;
}
.quickview-block {
	padding: .2rem 0;
}
.quickview-footer {
	justify-content: flex-start;
	background: transparent;
	border: 0;
	padding: 0;
}

.menu .menu-list li {
	overflow-wrap: anywhere;
}

.markdown-body {
      box-sizing: border-box;
      min-width: 200px;
      max-width: 980px;
      margin: 0 0 0 330px;
}
.markdown-body p{
    font-size: 18px;

}

.next { float: right;     background: #eee;
    padding: 5px 10px;}
.prev { float: left;    background: #eee;
    padding: 5px 10px;}

/*@media (max-width: 767px) {*/
@media only screen and (max-width:480px) {
	.markdown-body { margin: 0 auto; padding: 15px;}
	.markdown-body p{ font-size: 16px;}
	.header a.search { font-size: 2.5em; margin: 3px; display: block; line-height: 22px;}
	.search { display: none; }
	.title { padding: 0; }
	.title img { display: none;}
	.title img.stars { display: block !important; margin: 10px 0; float: left;}
	.title a.logo {display: block;padding: 5px 15px; }
	.side { display: none; visibility: hidden; padding-top: 60px;}
	.show { display: block !important; }
}

@media only screen and (min-width: 481px) and (max-width:768px) {
	.markdown-body { padding: 25px;}
	.header a.search { font-size: 2.5em; margin: 3px; display: none; line-height: 22px;}
	.search { display: block; padding: 7px 15px;}
	.show { display: block !important; }
	.title { padding: 0; }
	.title a.logo {display: block;padding: 5px 15px; }
	.title img { display: none;}
    	.title img.stars { display: block !important; margin: 10px 0; float: left;}
    
	.header + section.section {
		padding-top: 66px;
	}
}

